--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="location-not-found">
             <p>Sorry, location not found!</p>
-            <img src="404.png" alt="Img" id="location-not-found">
+            <img src="404.png" alt="Img" id="location-not-found" width="350px">
         </div>
         
         <div id="weather-body">
@@ -23,7 +23,7 @@
                 <p id="location"><i class="fa-solid fa-location-dot"></i></p>
             </div>
 
-            <img src="404.png" alt="Weather Image" id="weather-image">
+            <img alt="Weather Image" id="weather-image">
 
             <div class="temperature">
                 <p id="temperature"></p>
